...
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeVolText"
        app:layout_constraintVertical_bias="0.002">

        <Button
            android:id="@+id/settingsVolBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Settings"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="92dp" />

        <Button
            android:id="@+id/picVolBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Picture" />

        <Button
...
